Revert `.toList()` for Android compatibility